macros/tests/ui/entry_preinterrupt_no_arg.rs
#![no_main]

use msp430_rt_macros::entry;

fn init() {}

#[entry(interrupt_enable(pre_interrupt = init))]
fn main() -> ! {
    loop {}
}
